<resources>
    <string name="str_add_label">Make a recipe</string>
    <string name="showcase_image_message">This is a lovely kitten.</string>
    <string name="crash">App crashed. Choose email app and send logs, please</string>
    <string name="action_add">Add</string>
    <string name="action_lang">Language</string>
    <string name="action_clear">Clear all fields</string>
    <string name="action_new">New ingredient</string>
    <string name="category_none">None</string>
    <string name="category_fruit">Fruit</string>
    <string name="category_vegetables">Vegetables</string>
    <string name="category_rice_and_pasta">Rice And Pasta</string>
    <string name="category_eggs">Eggs</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_meat">Meat</string>
    <string name="category_red_meat">Red Meat</string>
    <string name="category_white_meat">White Meat</string>
    <string name="category_fish">Fish</string>
    <string name="category_seafood">Seafood</string>
    <string name="category_chicken">Chicken</string>
    <string name="category_soup">Soup</string>
    <string name="category_baking">Baking</string>
    <string name="category_hot_drinks">Hot Drinks</string>
    <string name="category_alcohol_drinks">Alcohol Drinks</string>
    <string name="category_ingredients">Ingredients</string>
    <string name="category_cheese">Cheese</string>
    <string name="category_herbs_and_spices">Herbs And Spices</string>
    <string name="category_nuts">Nuts</string>
    <string name="category_other">Other</string>
    <string name="category_oils_and_fat">Oils And Fat</string>
    <string name="category_sweetings">Sweetings</string>
    <string name="category_smoothies">Smoothies</string>
    <string name="category_salad">Salad</string>
    <string name="subcategory_none">None</string>
    <string name="subcategory_breakfast">Breakfast</string>
    <string name="subcategory_lunch">Lunch</string>
    <string name="subcategory_dinner">Dinner</string>
    <string name="subcategory_supper">Supper</string>
    <string name="subcategory_snack">Snack</string>
    <string name="subcategory_starters">Starters</string>
    <string name="subcategory_desserts">Desserts</string>
    <string name="subcategory_holidays">Holidays</string>
    <string name="subcategory_salad">Salad</string>
    <string name="subcategory_sides">Sides</string>
    <string name="measurement_tsp">teaspoon</string>
    <string name="measurement_tbsp">tablespoon</string>
    <string name="measurement_fl_oz">fluid ounce</string>
    <string name="measurement_gill">gill (about &#189; cup)</string>
    <string name="measurement_cup">cup</string>
    <string name="measurement_pint">pint</string>
    <string name="measurement_quart">quart</string>
    <string name="measurement_gal">gal</string>
    <string name="measurement_piece">piece</string>
    <string name="measurement_ml">ml</string>
    <string name="measurement_l">l (litre)</string>
    <string name="measurement_dl">dl</string>
    <string name="measurement_pinch">pinch</string>
    <string name="measurement_lb">lb</string>
    <string name="measurement_oz">oz</string>
    <string name="measurement_mcg">mcg</string>
    <string name="measurement_mg">mg</string>
    <string name="measurement_g">g</string>
    <string name="measurement_kg">kg</string>
    <string name="measurement_mm">mm</string>
    <string name="measurement_cm">cm</string>
    <string name="measurement_m">m</string>
    <string name="measurement_in">in</string>
    <string name="app_name">5:2 Recipes</string>
    <string name="app_id">506406952715872</string>
    <string name="str_facebook_share_message_1">Welcome to 5:2 Recipes app</string>
    <string name="str_facebook_share_message_2">It reminds me of my fasting days and I can in a very simple way enter the things I eat and keep track of that.</string>
    <string name="str_facebook_share_message_3">Download application from</string>
    <string name="str_facebook_share_message_4">Download application from</string>
    <string name="str_facebook_share_message_5">New goal achieved!!!</string>
    <string name="str_facebook_share_message_6">One, two&#8230; seven?: Use app for 7 days in a row.</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="str_facebook_caption">Check out this recipe!</string>
    <string name="str_loading">loading&#8230;</string>
    <string name="str_main_title">Account\nRegistration</string>
    <string name="str_facebook_title">Sign in with your Facebook account</string>
    <string name="str_facebook">Sign in with Facebook</string>
    <string name="str_credentials_title">or with your credentials</string>
    <string name="str_credentials_enter">Enter your credentials</string>
    <string name="str_password_title">Forgot your password?</string>
    <string name="str_password">Restore Password</string>
    <string name="str_credentials">Sign in with credentials</string>
    <string name="str_registration_title">or register as new user</string>
    <string name="str_registration">Simple Registration</string>
    <string name="str_registration_complete">Complete Registration</string>
    <string name="str_back">Back</string>
    <string name="str_login_edittext_email_hint">email</string>
    <string name="str_invalid_email">User email is not valid</string>
    <string name="str_required_email">The email field is required</string>
    <string name="str_empty_password">User password is empty</string>
    <string name="str_login_edittext_password_hint">password</string>
    <string name="str_signing_in">Signing In&#8230;</string>
    <string name="str_start">Start</string>
    <string name="str_myStats">My Stats</string>
    <string name="str_media">Media</string>
    <string name="str_recipes">Recipes</string>
    <string name="str_calorie">Calorie Menu</string>
    <string name="str_used_cal">used kcal:</string>
    <string name="str_cal_left">kcal left:</string>
    <string name="str_until_food">until food</string>
    <string name="str_until_fasting">until fasting</string>
    <string name="str_diet_setting">Diet Settings</string>
    <string name="str_internet_connection">Can\'t connect to server. Please check your internet connection.</string>
    <string name="use_cal">used kcal:</string>
    <string name="cal_left">kcal left:</string>
    <string name="str_wait">Wait&#8230;</string>
    <string name="str_sent_request_successful">Request sent successfully</string>
    <string name="str_sent_request_fail">Request sending fail</string>
    <string name="str_dont_forget">Don\'t forget that tomorrow will be fasting day!</string>
    <string-array name="calorie">
        <item>&lt; 100</item>
        <item>&lt; 200</item>
        <item>&lt; 300</item>
        <item>&lt; 400</item>
        <item>&lt; 500</item>
        <item>&lt; 600</item>
        <item>&lt; 700</item>
        <item>&lt; 800</item>
        <item>&lt; 900</item>
        <item>&lt; 1000</item>
        <item>&lt; 1100</item>
        <item>&lt; 1200</item>
        <item>&lt; 1300</item>
        <item>&lt; 1400</item>
        <item>&lt; 1500</item>
        <item>&lt; 1600</item>
        <item>&lt; 1700</item>
        <item>&lt; 1800</item>
        <item>&lt; 1900</item>
    </string-array>
    <string name="str_header_kcal">Kcal</string>
    <string name="str_header_rating">Rating</string>
    <string name="str_search">Search</string>
    <string name="str_clear">clear</string>
    <string name="str_language">Language:</string>
    <string name="str_sort">Sort by:</string>
    <string name="str_categories">show\ncategories</string>
    <string name="str_favorites">Favorites</string>
    <string name="str_closing_title">Closing</string>
    <string name="str_closing_msg">Are you sure you want to leave recipe creation? Unfinished recipe will be stored locally so you can edit it next time.</string>
    <string-array name="filter_array">
        <item>Pending</item>
        <item>Rejected</item>
        <item>Approved</item>
    </string-array>
    <string-array name="lang_array">
        <item>All</item>
        <item>English</item>
        <item>Swedish</item>
    </string-array>
    <string name="str_all">All</string>
    <string name="str_lang_en">English</string>
    <string name="str_lang_sv">Swedish</string>
    <string-array name="sort_array">
        <item>Latest</item>
        <item>Rating</item>
        <item>Title</item>
        <item>Kcal</item>
    </string-array>
    <string-array name="ingredient_sort_array">
        <item>Title</item>
        <item>Kcal</item>
    </string-array>
    <string name="str_sort_latest">Latest</string>
    <string name="str_sort_rating">Rating</string>
    <string name="str_sort_title">Title</string>
    <string name="str_sort_kcal">Kcal</string>
    <string name="str_filter_pending">Pending only</string>
    <string name="str_filter_rejected">Rejected only</string>
    <string name="str_filter_approved">Approved only</string>
    <string name="str_no_recipes">No results found. Check your "advanced search" settings.\nYou can create your own recipes by clicking "+" button</string>
    <string name="str_refresh">refresh</string>
    <string name="str_refreshing">refreshing&#8230;</string>
    <string name="str_filter">filter</string>
    <string name="str_adv_search">advanced search</string>
    <string name="str_adv_search_title">Advanced Search</string>
    <string name="str_search_btn">search</string>
    <string name="str_recipe_category">Recipe category</string>
    <string name="str_recipe_type">Recipe type</string>
    <string name="str_calorie_limit">Calorie limit</string>
    <string name="str_txt_placeholder">-</string>
    <string name="str_ingredients">Ingredients</string>
    <string name="str_screenshots">Screenshots</string>
    <string name="str_author">Author:</string>
    <string name="str_rate_directions">Tap on stars to rate</string>
    <string name="str_rate_directions_dialog">Tap on stars to rate.</string>
    <string name="str_rate_title">Rate Recipe</string>
    <string name="str_rate">Rate</string>
    <string name="str_list_expand">Show full list</string>
    <string name="str_reject">reject</string>
    <string name="str_approve">approve</string>
    <string name="review_approved_success">Recipe was approved</string>
    <string name="review_rejected_success">Recipe was rejected</string>
    <string name="str_reject_title">Rejecting Recipe</string>
    <string name="str_category_title">Choose recipe category</string>
    <string name="str_category_hint">Choose most relevant category.</string>
    <string name="str_type_title">Choose recipe type</string>
    <string name="str_type_hint">Choose most relevant type of your recipe. Mostly it is related to eating time like Dinner or Lunch.</string>
    <string name="str_time_title">Choose cooking time</string>
    <string name="str_time_hint">Set number of minutes and hours your dish needs to be completed.</string>
    <string name="str_intensity">Set your desired fasting intensity</string>
    <string name="str_52">5:2</string>
    <string name="str_43">4:3</string>
    <string name="str_61">6:1</string>
    <string name="str_recommended">Recommended is 5:2.</string>
    <string name="str_great">Great!</string>
    <string name="str_ready">You are ready to start your diet.</string>
    <string name="str_good_luck">Good luck!</string>
    <string name="str_dialog_5">Cancel</string>
    <string name="str_dialog_27">Recover</string>
    <string name="str_dialog_28">Password Recovering</string>
    <string name="str_dialog_29">Enter your email to proceed password recovering process. New password will be sent to provided email.</string>
    <string name="str_email_hint">Email</string>
</resources>