<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slk="http://schemas.slktechlabs.com/slk"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="@dimen/consumed_padding_left"
    android:layout_marginRight="@dimen/consumed_padding_right"
    android:background="@drawable/ic_background_dialog_patch" >

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:id="@+id/tv_txt_guide1"
        style="@style/style12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dialogues_padding_top"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/str_dialog_28"
        slk:typeface="font/ClementePDam-Bold.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:id="@+id/tv_txt_guide2"
        style="@style/style3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_txt_guide1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dialogue_padding_right"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/str_dialog_29"
        slk:typeface="font/ClementePDak-SemiBold.otf" />

    <com.stockholmapplab.recipes.typeface.CustomEditText
        android:id="@+id/et_edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_txt_guide2"
        android:layout_marginBottom="@dimen/consumed_margin_top"
        android:layout_marginTop="@dimen/consumed_margin_top"
        android:background="@drawable/ic_time_patch"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/str_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/light_gray"
        android:textSize="@dimen/login_edittext_font_size"
        slk:typeface="font/ClementePDak-SemiBold.otf" />

    <LinearLayout
        android:id="@+id/ll_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_edtEmail"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <com.stockholmapplab.recipes.typeface.CustomButton
            android:id="@+id/bt_btn_cancel"
            style="@style/style5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ac_blue_patch_selector"
            android:text="@string/str_dialog_5"
            slk:typeface="font/ClementePDam-Bold.otf" />

        <com.stockholmapplab.recipes.typeface.CustomButton
            android:id="@+id/bt_btn_ok"
            style="@style/style5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/consumed_padding_top"
            android:layout_weight="1"
            android:background="@drawable/ac_blue_patch_selector"
            android:text="@string/str_dialog_27"
            slk:typeface="font/ClementePDam-Bold.otf" />
    </LinearLayout>

</RelativeLayout>