<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slk="http://schemas.slktechlabs.com/slk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <com.stockholmapplab.recipes.typeface.CustomTextView
            android:id="@+id/tv_txtFastingIntensity"
            style="@style/style4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/str_intensity"
            slk:typeface="font/ClementePDao-Heavy.otf" />

        <LinearLayout
            android:id="@+id/ll_linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/ll_linear11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.stockholmapplab.recipes.typeface.CustomTextView
                    android:id="@+id/tv_txt52"
                    style="@style/style7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_52"
                    slk:typeface="font/ClementePDar-UltraBoldItali.otf" />

                <ImageView
                    android:id="@+id/iv_img52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/raw_radio_button_selector"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_linear12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.stockholmapplab.recipes.typeface.CustomTextView
                    android:id="@+id/tv_txt43"
                    style="@style/style7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/str_43"
                    slk:typeface="font/ClementePDar-UltraBoldItali.otf" />

                <ImageView
                    android:id="@+id/iv_img43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/raw_radio_button_selector"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_linear13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.stockholmapplab.recipes.typeface.CustomTextView
                    android:id="@+id/tv_txt61"
                    style="@style/style7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/str_61"
                    slk:typeface="font/ClementePDar-UltraBoldItali.otf" />

                <ImageView
                    android:id="@+id/iv_img61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="11dp"
                    android:background="@drawable/raw_radio_button_selector"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>
        </LinearLayout>

        <com.stockholmapplab.recipes.typeface.CustomTextView
            android:id="@+id/tv_txtRecommended"
            style="@style/style26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_bulb"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/str_recommended"
            slk:typeface="font/ClementePDal-SemiBoldItalic.otf" />

        <com.stockholmapplab.recipes.util.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</RelativeLayout>