<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slk="http://schemas.slktechlabs.com/slk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/add_padding_bottom" >

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/str_category_title"
        android:textColor="@color/black"
        android:textSize="@dimen/add_title_txt_size"
        slk:typeface="font/ClementePDam-Bold.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="0dp"
        android:drawableLeft="@drawable/ic_bulb"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3dp"
        android:paddingLeft="@dimen/add_hint_padding"
        android:paddingRight="@dimen/add_hint_padding"
        android:text="@string/str_category_hint"
        android:textColor="@color/gray"
        android:textSize="@dimen/add_hint_txt_size"
        slk:typeface="font/ClementePDal-SemiBoldItalic.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:id="@+id/addCategoryTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/add_margin_largest"
        android:layout_marginRight="@dimen/add_margin_largest"
        android:background="@drawable/ic_time_patch_small"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        slk:typeface="font/ClementePDam-Bold.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/str_type_title"
        android:textColor="@color/black"
        android:textSize="@dimen/add_title_txt_size"
        slk:typeface="font/ClementePDam-Bold.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/add_margin"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/ic_bulb"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3dp"
        android:paddingLeft="@dimen/add_hint_padding"
        android:paddingRight="@dimen/add_hint_padding"
        android:text="@string/str_type_hint"
        android:textColor="@color/gray"
        android:textSize="@dimen/add_hint_txt_size"
        slk:typeface="font/ClementePDal-SemiBoldItalic.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:id="@+id/addTypeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/add_margin_largest"
        android:layout_marginRight="@dimen/add_margin_largest"
        android:background="@drawable/ic_time_patch_small"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        slk:typeface="font/ClementePDam-Bold.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/str_time_title"
        android:textColor="@color/black"
        android:textSize="@dimen/add_title_txt_size"
        slk:typeface="font/ClementePDam-Bold.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/ic_bulb"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3dp"
        android:paddingLeft="@dimen/add_hint_padding"
        android:paddingRight="@dimen/add_hint_padding"
        android:text="@string/str_time_hint"
        android:textColor="@color/gray"
        android:textSize="@dimen/add_hint_txt_size"
        slk:typeface="font/ClementePDal-SemiBoldItalic.otf" />

    <com.stockholmapplab.recipes.typeface.CustomTextView
        android:id="@+id/addTimeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/add_margin_largest"
        android:layout_marginRight="@dimen/add_margin_largest"
        android:background="@drawable/ic_time_patch_small"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        slk:typeface="font/ClementePDam-Bold.otf" />

</LinearLayout>